# boidz

./: Cargo.toml  README.md
src/: boid.rs  lib.rs  main.rs  rules.rs
